@@ -1,3 +1,13 @@
+2004-03-24  Darin Adler  <darin@apple.com>
+
+        Reviewed by John.
+
+        - fixed <rdar://problem/3599650>: main image missing due to incorrect relative URL resolution at www.brother.com
+
+        * kwq/KWQKURL.mm: (KURL::KURL): Implement compatibility rule from the URI RFC.
+        If a URL has a scheme, but does not start with the "/" character, and the scheme
+        matches the base URL, then treat it as a relative URL.
+
 2004-03-24  Ken Kocienda  <kocienda@apple.com>
 
         Reviewed by me.
